--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -93,6 +93,6 @@ bSkipMovies=False
 +DirectoriesToAlwaysCook=(Path="/RuntimeSpeechRecognizer/LanguageModels")
 
 [/Script/RuntimeSpeechRecognizer.SpeechRecognizerSettings]
-ModelSize=Small
-ModelLanguage=Multilingual
+ModelSize=Tiny
+ModelLanguage=EnglishOnly
 
