Time based gameplay

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -93,6 +93,6 @@ bSkipMovies=False
 +DirectoriesToAlwaysCook=(Path="/RuntimeSpeechRecognizer/LanguageModels")
 
 [/Script/RuntimeSpeechRecognizer.SpeechRecognizerSettings]
-ModelSize=Tiny
+ModelSize=Medium
 ModelLanguage=EnglishOnly
 
