--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 *.fbx filter=lfs diff=lfs merge=lfs -text
 *.hda filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
+*.pdb filter=lfs diff=lfs merge=lfs -text
