--- a/SzalkaWPrawo.uproject
+++ b/SzalkaWPrawo.uproject
@@ -13,12 +13,12 @@
 		},
 		{
 			"Name": "RuntimeAudioImporter",
-			"Enabled": true,
+			"Enabled": false,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/81fd278e318e4235a028d3fdf46bf036"
 		},
 		{
 			"Name": "RuntimeSpeechRecognizer",
-			"Enabled": true,
+			"Enabled": false,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/2b33311abdb048819664a6cfe0bbd90d"
 		},
 		{
