--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -90,6 +90,9 @@ bSkipMovies=False
 -IniSectionDenylist=StorageServers
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
++MapsToCook=(FilePath="/Game/Level_2_Mapa")
++MapsToCook=(FilePath="/Game/FirstPerson/Maps/FirstPersonMap")
++MapsToCook=(FilePath="/Game/MainMenu/MainMenu")
 +DirectoriesToAlwaysCook=(Path="/RuntimeSpeechRecognizer/LanguageModels")
 
 [/Script/RuntimeSpeechRecognizer.SpeechRecognizerSettings]
