--- a/Plugins/HoudiniEngine/HoudiniEngine.uplugin
+++ b/Plugins/HoudiniEngine/HoudiniEngine.uplugin
@@ -26,7 +26,7 @@
 		},
 		{
 			"Name" : "HoudiniEngineRuntime",
-			"Type" : "Runtime",
+			"Type" : "Editor",
 			"LoadingPhase" : "Default"
 		}
 	],
