--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,4 @@
 *.png filter=lfs diff=lfs merge=lfs -text
 *.pdb filter=lfs diff=lfs merge=lfs -text
 *.wav filter=lfs diff=lfs merge=lfs -text
+*.lnk filter=lfs diff=lfs merge=lfs -text
